# ot_node_v6

./: .gitignore  CMakeLists.txt  Kconfig  README.md  build-xiao.sh  flash-xiao.sh  prj.conf
app/: CMakeLists.txt
app/include/: app_core.h  coap_client.h  scd41.h  thread_mgr.h  topic.h  transport.h
app/include/sensors/: bmp388.h  ds18b20.h  dsmr.h  max31850.h  onewire_inventory.h  sen50.h  sht41.h
app/src/: app_antenna.c  app_core.c  main.c  thread_mgr.c
app/src/sensors/: bmp388.c  ds18b20.c  dsmr.c  max31850.c  onewire_inventory.c  scd41.c  sen50.c  sht41.c
app/src/transport/: coap_client.c  transport.c
app/src/util/: topic.c
boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
lib/: CMakeLists.txt
nodes/: ND12.conf  ND13.conf  ND132.conf  ND140.conf  ND141.conf  ND142.conf  ND30.conf  ND31.conf  ND61.conf
overlays/: overlay-54l15.conf  overlay-OT-network-basis.conf  overlay-OT-network-ftd.conf  overlay-OT-network-mtd.conf
