cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(ot_templatev5)

# Add include directory
target_include_directories(app PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/include/sensors
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)


# Add all sources for the app
target_sources(app PRIVATE
    src/main.c
    src/app_core.c
    src/thread_mgr.c
    src/util/topic.c
    src/transport/transport.c
    src/transport/coap_client.c
    src/sensors/sht41.c
    src/sensors/scd41.c
    src/app_antenna.c
)
